fix: set ignore-unknown-roles to true to avoid "Unsupported message type error" in Spring AI and deprecate this property